force-app/main/default/objects/Product2/fields/Compenso_netto_musicista_50_eu_benzina__c.field-meta.xml
<CustomField>
    <fullName>Compenso_netto_musicista_50_eu_benzina__c</fullName>
    <label>Compenso netto musicista + 50 eu benzina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>