force-app/main/default/objects/Product2/fields/DescriptionEN__c.field-meta.xml
<CustomField>
    <fullName>DescriptionEN__c</fullName>
    <label>Description EN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>