force-app/main/default/objects/Product2/fields/DescriptionIT__c.field-meta.xml
<CustomField>
    <fullName>DescriptionIT__c</fullName>
    <label>Description IT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>