force-app/main/default/objects/Product2/fields/X10_commissione_planner__c.field-meta.xml
<CustomField>
    <fullName>X10_commissione_planner__c</fullName>
    <label>10% commissione planner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>