force-app/main/default/objects/Product2/fields/X30_tassazione_cooperative_o_varie__c.field-meta.xml
<CustomField>
    <fullName>X30_tassazione_cooperative_o_varie__c</fullName>
    <label>30% tassazione cooperative o varie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>