force-app/main/default/objects/Product2/fields/X40_margine_di_guadagno__c.field-meta.xml
<CustomField>
    <fullName>X40_margine_di_guadagno__c</fullName>
    <label>40% margine di guadagno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>