force-app/main/default/objects/Product2/listViews/Prodotti_Fornitori.listView-meta.xml
<ListView>
    <fullName>Prodotti_Fornitori</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Price__c</columns>
    <columns>Compenso_netto_musicista_50_eu_benzina__c</columns>
    <columns>X40_margine_di_guadagno__c</columns>
    <columns>X30_tassazione_cooperative_o_varie__c</columns>
    <columns>X10_commissione_planner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Prodotti fornitori</value>
    </filters>
    <label>Prodotti Fornitori</label>
</ListView>